# summer_school_2026

./: README.md  sim_mapping.sh
agx_arm_sim/: .gitmodules  README.md
agx_arm_sim/Moveit2/: README.md
agx_arm_sim/agx_arm_description/: CMakeLists.txt  README.md  package.xml
agx_arm_sim/agx_arm_description/agx_arm_urdf/: README.md  README_EN.md
agx_arm_sim/agx_arm_description/agx_arm_urdf/nero/urdf/: nero_with_revo2_flange_description.xacro
agx_arm_sim/agx_arm_description/agx_arm_urdf/piper/urdf/: piper_description.urdf
agx_arm_sim/agx_arm_description/agx_arm_urdf/piper_h/urdf/: piper_h_description.urdf
agx_arm_sim/agx_arm_description/agx_arm_urdf/piper_l/urdf/: piper_l_description.urdf
agx_arm_sim/agx_arm_description/agx_arm_urdf/piper_x/urdf/: piper_x_description.urdf
agx_arm_sim/agx_arm_description/config/: arm_config.yaml
agx_arm_sim/agx_arm_description/launch/: display.launch.py
agx_arm_sim/agx_arm_description/meshes/: gripper_left_link.dae  gripper_right_link.dae  realsense_mid_stand.dae  teach.dae  teach_link1.dae  teach_link2.dae
agx_arm_sim/agx_arm_description/rviz/: default.rviz
agx_arm_sim/agx_arm_description/scripts/: get_urdf_path.py
agx_arm_sim/agx_arm_description/urdf/: agx_arm_description.urdf.xacro  nero_gripper_d435.urdf  pika2_gripper.urdf  pika_gripper_description.urdf  piper_girpper_D435.urdf  piper_h_gripper_d435.urdf  piper_l_gripper_d435.urdf  piper_x_gripper_d435.urdf  teach_pendant.urdf.xacro
agx_arm_sim/agx_arm_description/urdf/USD/nero_gripper_d435/: nero_gripper_d435.usd
agx_arm_sim/agx_arm_description/urdf/USD/nero_gripper_d435/configuration/: nero_gripper_d435_physics.usd  nero_gripper_d435_robot.usd
agx_arm_sim/agx_arm_description/urdf/USD/piper_girpper_D435/: piper_girpper_D435.usd
agx_arm_sim/agx_arm_description/urdf/USD/piper_girpper_D435/configuration/: piper_girpper_D435_physics.usd
agx_arm_sim/agx_arm_description/urdf/USD/piper_h_gripper_d435/: piper_h_gripper_d435.usd
agx_arm_sim/agx_arm_description/urdf/USD/piper_h_gripper_d435/configuration/: piper_h_gripper_d435_physics.usd
agx_arm_sim/agx_arm_description/urdf/USD/piper_l_gripper_d435/: piper_l_gripper_d435.usd
agx_arm_sim/agx_arm_description/urdf/USD/piper_l_gripper_d435/configuration/: piper_l_gripper_d435_physics.usd  piper_l_gripper_d435_sensor.usd
agx_arm_sim/agx_arm_description/urdf/USD/piper_x_gripper_d435/: piper_x_gripper_d435.usd
agx_arm_sim/agx_arm_description/urdf/USD/piper_x_gripper_d435/configuration/: piper_x_gripper_d435_physics.usd  piper_x_gripper_d435_robot.usd
gld_robot_description/: CMakeLists.txt  package.xml
gld_robot_description/launch/: gld_robot_description_launch.py
gld_robot_description/model/: gld_robot_description.urdf
gld_robot_description/rviz/: 3d_show.rviz  nav2.rviz  nav2_new.rviz
ign_sim_pointcloud_tool/src/: point_cloud_converter.cpp
learnning_piper/: CMakeLists.txt  package.xml
learnning_piper/launch/: move_and_collision.launch.py  move_straight_line.launch.py  move_target.launch.py
learnning_piper/src/: Pinocchio_arc.py  Pinocchio_more_traj.py  Pinocchio_plot.py  move_and_collision.cpp  move_joint.cpp  move_multi_target.cpp  move_straight_line.cpp  move_target.cpp
lio_interface/: CMakeLists.txt  package.xml
lio_interface/config/: static_tf.yaml
lio_interface/launch/: fastlio_lio_interface_launch.py  lio_interface_launch.py  (+1 more)
log/: latest_list
mini_cobot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
pcd2pgm-master/: package.xml
registration/KISS-Matcher/cpp/kiss_matcher/: CMakeLists.txt
registration/KISS-Matcher/cpp/kiss_matcher/cmake/: Findflann.cmake  kiss_matcherConfig.cmake
registration/KISS-Matcher/cpp/kiss_matcher/core/kiss_matcher/: KISSMatcher.cpp
registration/KISS-Matcher/python/: CMakeLists.txt  README.md  pyproject.toml
registration/KISS-Matcher/python/examples/: quickstart.py  run_kiss_matcher.py
registration/KISS-Matcher/python/kiss_matcher/: __init__.py  io_utils.py
registration/KISS-Matcher/python/kiss_matcher/pybind/: kiss_matcher_pybind.cpp
registration/KISS-Matcher/python/tests/: __init__.py  test_kiss_matcher.py
registration/KISS-Matcher/python/utils/: bin2pcd.py
registration/global_relocalization_kiss_matcher/: CMakeLists.txt  README_CN.md  README_ROS2_REGISTRATION_CN.md  package.xml
registration/global_relocalization_kiss_matcher/config/: alignment_config.yaml
registration/global_relocalization_kiss_matcher/config/kimera_multi/: ouster64.yaml  velodyne16.yaml
registration/global_relocalization_kiss_matcher/include/global_kiss_matcher_relocalization/: global_kiss_matcher_relocalization.hpp  packet.hpp
registration/global_relocalization_kiss_matcher/include/global_small_gicp_relocalization/: global_small_gicp_relocalization.hpp
registration/global_relocalization_kiss_matcher/launch/: global_kiss_matcher_relocalization_launch.py  global_small_gicp_relocalization_launch.py  inter_frame_alignment.launch.yaml  run_kiss_matcher_sam.launch.yaml
registration/global_relocalization_kiss_matcher/src/: global_kiss_matcher_relocalization.cpp  global_small_gicp_relocalization.cpp  inter_frame_alignment.cpp
scout/scout_bringup/: CMakeLists.txt  package.xml
scout/scout_bringup/config/: Pointcloud2d_3d.yaml  nav2_params.yaml  slam_toolbox_params.yaml
scout/scout_bringup/launch/: pointcloud_to_laserscan_launch.py  scout_nav2_bringup.launch.py  slam_toolbox.launch.py
scout/scout_bringup/maps/: map11.pgm  map11.yaml
scout/scout_bringup/rviz/: nav2.rviz
sensor_interface/: CMakeLists.txt  package.xml
sensor_interface/include/sensor_interface/: sensor_interface.hpp
sensor_interface/launch/: fastlio_sensor_interface_launch.py  pointlio_sensor_interface_launch.py  sensor_interface_launch.py
sensor_interface/src/: sensor_interface.cpp
sensor_scan_generation/: CMakeLists.txt  package.xml
sensor_scan_generation/include/sensor_scan_generation/: sensor_scan_generation.hpp
sensor_scan_generation/launch/: sensor_scan_generation_launch.py
sensor_scan_generation/src/: sensor_scan_generation.cpp
(+168 files in other folders)
