<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agx_arm_description</name>
  <version>0.1.0</version>
  <description>
    AgileX 系列机械臂的 ROS2 description 功能包。
    支持通过参数选择机械臂型号（piper / piper_h / piper_l / piper_x / nero / revo2）
    以及末端执行器类型，在 RViz2 中可视化 URDF 模型。
    URDF/Xacro 文件来自 agx_arm_urdf 子模块仓库。
  </description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- 构建工具 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 运行依赖 -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>urdf</exec_depend>

  <!-- launch 依赖 -->
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
